minio.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: s3-transfersh-app
spec:
  serviceName: s3-transfersh-service
  replicas: 1  # сколько подов требуется в стейтфулсете
  template:
    metadata:
      labels:
        # label нужен из тех же соображений, что и в деплойменте.
        app: s3-transfersh-app
    spec:
      containers:
        - name: s3-transfersh-container
          image: minio/minio:latest
          args: [ "server", "/storage/" ]
          ports:
            - containerPort: 9000
              name: s3-transfersh
          volumeMounts:
            - mountPath: "/storage"
              name: minio-storage
  volumeClaimTemplates:
    - metadata:
        name: minio-storage
      spec:
        accessModes:
          - ReadWriteOnce # можно читать/писать только на одной ноде
        resources:
          requests:
            storage: 8Gi

  # selector нужен из тех же соображений, что и в деплойменте.
  selector:
    matchLabels:
      app: s3-transfersh-app
