transfersh.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: transfer-app
    spec:
      containers:
        - name: transfer-container
          image: dutchcoders/transfer.sh:v1.6.1
          args: ["--provider=s3"]
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: transfer-app
