minio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: s3-transfersh-service
spec:
  # ClusterIP — самый простой тип сервиса, который 
  # позволяет подам связываться друг с другом в рамках
  # кластера, но абсолютно никак не виден снаружи:
  type: ClusterIP
  clusterIP: None
  selector:
    app: s3-transfersh-app
  ports:
    - name: api
      port: 9000
      targetPort: 9000
