transfersh-service.yml
apiVersion: v1
kind: Service
metadata:
  name: transfersh-service
spec:
  # NodePort — один из встроенных типов сервисов
  # в Kubernetes. Его выбор сейчас обусловлен особенностями
  # реализации minikube, в нормальном кластере можно
  # было бы использовать более простой type: ClusterIP.
  type: NodePort
  selector:
    app: transfer-app
  ports:
    - protocol: TCP
      port: 8080
