ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - transfersh.iu4.dev
      secretName: transfersh-iu4-dev-tls
  rules:
    - host: transfersh.iu4.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transfersh-service
                port:
                  number: 8080
