nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    - host: transfersh.iu4.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transfersh-service
                port:
                  number: 8080
